src/objects/DAS__c.object
<CustomObject>
    <fields>
        <fullName>Concurrence_to_DAS__c</fullName>
        <label>Concurrence to DAS</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Issues_to_DAS__c</fullName>
        <label>Issues to DAS</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Initiation</fullName>
                </value>
                <value>
                    <fullName>Preliminary</fullName>
                </value>
                <value>
                    <fullName>Amended Preliminary</fullName>
                </value>
                <value>
                    <fullName>Final</fullName>
                </value>
                <value>
                    <fullName>Amended Final</fullName>
                </value>
                <value>
                    <fullName>Deadline for Decision on how to proceed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>DAS</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>DAS ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DAS</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>